--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,20 +6,23 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo"
+        android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.Eventbrite"
         tools:targetApi="31">
         <activity
-            android:name=".SignUp"
-            android:theme="@style/Theme.Eventbrite"
+            android:name=".SignIn"
             android:exported="false" />
         <activity
+            android:name=".SignUp"
+            android:exported="false"
+            android:theme="@style/Theme.Eventbrite" />
+        <activity
             android:name=".Onboarding1"
-            android:theme="@style/Theme.Eventbrite"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Eventbrite" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
