Firebase Authentication Integrated to the Application

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     alias(libs.plugins.android.application)
+
+
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -44,5 +47,9 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation libs.cardview
+
+    implementation platform(libs.firebase.bom)
+    implementation libs.firebase.database
+    implementation(libs.firebase.auth)
 
 }
