User and Event Model and Services for backend

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     implementation platform(libs.firebase.bom)
     implementation libs.firebase.database
     implementation(libs.firebase.auth)
+    implementation(libs.firebase.storage)
 
 }
