--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation(libs.firebase.auth)
     implementation(libs.firebase.storage)
     implementation libs.glide
+    implementation libs.play.services.location
+
     annotationProcessor libs.compiler
 
 }
